[UNTESTED] bringing back the unban cmd pt.1